feat: add issue, attachments, comments flow